# TrueMemory

./: .gitignore  <sqlite3.Connection object at 0x1004464d0>  BUILD_PROMPT_DASHBOARD_REDESIGN.md  BUILD_PROMPT_PHASE1.md  BUILD_PROMPT_TIER_FIX.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  DASHBOARD_SPEC.md  DRAIN_REPORT.md  DRAIN_REPORT_v2.md  ISSUE_TRIAGE.md  README.md  SECURITY_REVIEW_PROMPT.md  install.ps1  install.sh  pyproject.toml  test_windows_fixes.py  truememory.db.backup-pre-migration-1781031426-25fa7912
.github/workflows/: ci.yml  publish.yml
benchmarks/: BENCHMARK_LOG.md  __init__.py  reranker_shootout.py  reranker_shootout_20.py
benchmarks/beam/: bench_rag_beam10m.py  (+2 more)
docs/: architecture.md  cli.md  compatibility.md  env-vars.md  mcp-tools.md  migration.md  python-api.md  resource-budgets.md  setup-codex.md  setup-cursor.md  setup-gemini.md  setup-hermes.md  setup-kimi.md  setup-openclaw.md
i18n/: README.ar.md  README.bn.md  README.de.md  README.es.md  README.fr.md  README.hi.md  README.id.md  README.it.md  README.ja.md  README.ko.md  README.nl.md  README.pl.md  README.pt-BR.md  README.ru.md  README.th.md  README.tr.md  README.uk.md  README.vi.md  README.zh-CN.md
neuromem/: __init__.py  engine.py  hybrid.py  mcp_server.py  reranker.py  storage.py  vector_search.py
scripts/: DRAIN_MONITOR_LOOP.md
tests/: conftest.py  test_cli_help.py  test_codex_adapter.py  test_cold_start_resilience.py  test_concurrent_store_hang.py  test_consolidation_lock.py  test_cursor_adapter.py  test_custom_tier.py  test_directives_discoverability.py  test_encoding_gate_pe_floor.py  test_encoding_gate_search_cache.py  test_encoding_gate_threshold.py  test_encoding_gate_weight_env.py  test_engine_tier_switch_hardening.py  test_gate_enabled_env.py  test_gate_eval_harness.py  test_gemini_adapter.py  test_hardening.py  test_health_stats.py  test_hermes_adapter.py  test_hook_framework.py  test_instrumentation.py  test_issue_396_memory_intensity.py  test_issue_457_pickle_rce.py  test_issue_458_socket_bounds.py  test_issue_459_mps_oom.py  test_issue_461_stale_lock.py  test_issue_463_hyde_tier_gate.py  test_issue_465_qwen3_nan_async.py  test_issue_466_temporal_key.py  test_issue_467_entity_case.py  test_issue_468_embed_lock_scope.py  test_issue_485_nan_thread.py  test_issue_487_search_scoring.py  test_issue_489_mps_safety.py  test_issue_491_foreign_keys.py  test_issue_493_cascade_delete.py  test_issue_496_update_lock.py  test_issue_498_auto_consolidate.py  test_issue_502_config.py  (+91 more)
truememory/: __init__.py  _platform.py  _sanitize.py  agentic_search.py  client.py  cloud_proxy.py  clustering.py  config.py  consolidation.py  engine.py  fts_search.py  hybrid.py  hyde.py  mcp_server.py  model_client.py  model_server.py  mps_utils.py  personality.py  personality_style_vec.py  predictive.py  reranker.py  salience.py  storage.py  telemetry.py  temporal.py  tier_config.py  vector_search.py
(+444 files in other folders)
