[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "truememory"
version = "0.3.0"
description = "SOTA-level agent memory at zero infrastructure cost."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "@Building_Josh" },
]
keywords = ["memory", "ai", "agents", "llm", "rag", "sqlite", "locomo", "mcp", "embeddings"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "model2vec>=0.6.0,<1.0",
    "sqlite-vec>=0.1.0,<1.0",
    "numpy>=1.24.0",
    # mcp[cli] and httpx are required by truememory.mcp_server, which is the
    # primary entry point of this package (`truememory-mcp`). Previously these
    # lived in the `[mcp]` optional extra, which caused `pip install truememory
    # && truememory-mcp --setup` to crash with ModuleNotFoundError on first run.
    # Moved to core in 0.3.0. The [mcp] extra below is kept as a no-op alias
    # for backwards compatibility.
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
gpu = ["sentence-transformers>=3.0.0", "torch>=2.0.0"]
reranker = ["sentence-transformers>=3.0.0", "torch>=2.0.0"]
agentic = ["anthropic>=0.80.0"]
mcp = ["mcp[cli]>=1.0.0", "httpx>=0.27.0"]
dev = ["pytest>=7.0", "ruff>=0.4"]
all = ["truememory[gpu,reranker,agentic,mcp]"]

[project.scripts]
truememory-mcp = "truememory.mcp_server:main"
truememory-ingest = "truememory.ingest.cli:main"

[project.urls]
Homepage = "https://github.com/buildingjoshbetter/TrueMemory"
Repository = "https://github.com/buildingjoshbetter/TrueMemory"
Issues = "https://github.com/buildingjoshbetter/TrueMemory/issues"
Changelog = "https://github.com/buildingjoshbetter/TrueMemory/blob/main/CHANGELOG.md"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff.lint]
# Default ruleset is fine for the core codebase. Per-file ignores below.

[tool.ruff.lint.per-file-ignores]
# __init__.py files re-export submodule symbols as the public API. Ruff
# flags these as F401 ("imported but unused") because they aren't consumed
# inside the file itself — but they ARE the file's purpose. Standard
# idiom is to ignore F401 for __init__ modules.
"__init__.py" = ["F401"]

[tool.hatch.build.targets.wheel]
packages = ["truememory"]

# CLAUDE_TEMPLATE.md lives inside the package at truememory/ingest/CLAUDE_TEMPLATE.md
# so it's auto-included in the wheel — no force-include needed.
